<resources>
    <string name="app_name">AmaderKishoreganj</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Amader Kishoreganj</string>
    <string name="second_fragment_label">Full Article</string>
    <string name="next">Click Here To See Full Article</string>

    <string name="previous">Go Back</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile: <br>kishoreganj district was established in\n1984 earlier it was a subdivision under the \nmymensingh district. The subdivision was established in 1860. The district consists of four municipalities, 39 wards, 145 mahallas, 13 upazilas, 105 union parishads, 946 mouzas and 1775 villages. Upazilas history in the ancient time kishoreganj area was included in the kingdom of the kamrupa. In the 11th and 12th century the pala, varman and sena kings ruled this area or part of it. After that there arose petty independent kingdoms under the koch, hajong, garo and rajbanshi. Although in 1491 ad the greater part of mymensingh was included within the muslim rule under firoz shah, kishoreganj remained outside. Greater part of kishoreganj was included in the mughal empire during the rein of the mughal emperor akbar. But some areas including jangalbari and egarasindhur remained under the koch and ahom kings. In 1538 ad the ahom king of egarasindhur was defeated by the mughals and in 1580 the koch chief of jangalbari was defeated by isa khan. The episode of the conflict between the mughal commander man singh and isa khan, the chief of the bara-bhuiyans in 1580 and the defeat of man singh at egarasindhur are still current. Though after the death of isa khan in 1599 the grater part of kishoreganj was still under the rule of his son musa khan, ultimately seceded to the mughals. Archeological sites jangalbari fort (fifteenth century), egarasindhur fort (fifteenth century), sadi mosque (1652), salanka jame mosque at pakundia, gurai mosque at bajitpur (1680), kutub shah mosque at austagram (1538), jawar saheb bari mosque at tarail (1534), badshahi mosque at itna (seventeenth century), bhagalpur dewan bari mosque at bajitpur (eighteenth century), sekandarnagar mosque at tarail (eighteenth century), hazrat samsuddin bokhari mosque kurikhai at katiadi (1005), chandrabati shiva mondir (sixteenth century), delhi akhra at mithamain, arabic stone inscription discovered at village ghagra, nataraj shiva sculpture discovered at nikli (fourteenth century), krishnadas\' deed for nandakishore pramanik discovered at kishoreganj sadar (1759).</br></string>
    <string name="firststring">Kishoreganj district (dhaka division) with an area of 2688.59 sq km, is bounded by netrokona and mymensingh districts on the north, narsingdi district on the southwest and brahmanbaria district on the southeast, sunamganj and habiganj districts on the east, gazipur and mymensingh districts on the west.. Main rivers are old brahmaputra, meghna, kalni, dhanu, ghorautra, baurii, narasunda; main depressions: humaipur (bajitpur), somai (nikli), barir (mithamain), surma baula (nikli), and tallar haors (nikli-bajitpur-austagram). There were a landlord named brozkishore pramanik/ nondo kishore pramanik in kishoregonj.</string>
    <string name="todo">TODO</string>

</resources>